@@ -1,6 +1,6 @@
 /*************************************************************************
  *
- * Copyright (c) 2010-2014 Kohei Yoshida
+ * Copyright (c) 2010-2017 Kohei Yoshida
  * 
  * Permission is hereby granted, free of charge, to any person
  * obtaining a copy of this software and associated documentation
@@ -25,8 +25,8 @@
  *
  ************************************************************************/
 
-#ifndef __MDDS_FLAT_SEGMENT_TREE_ITR_HPP__
-#define __MDDS_FLAT_SEGMENT_TREE_ITR_HPP__
+#ifndef INCLUDED_MDDS_FLAT_SEGMENT_TREE_ITR_HPP
+#define INCLUDED_MDDS_FLAT_SEGMENT_TREE_ITR_HPP
 
 namespace mdds { namespace __fst {
 
@@ -179,6 +179,120 @@ private:
     const typename fst_type::node* m_pos;
     value_type      m_current_pair;
     bool            m_end_pos;
+};
+
+template<typename _FstType>
+class const_segment_iterator
+{
+    typedef _FstType fst_type;
+    friend fst_type;
+
+    const_segment_iterator(const typename fst_type::node* start, const typename fst_type::node* end) :
+        m_start(start), m_end(end)
+    {
+        update_node();
+    }
+public:
+    struct value_type
+    {
+        typename fst_type::key_type start;
+        typename fst_type::key_type end;
+        typename fst_type::value_type value;
+    };
+
+    const_segment_iterator() : m_start(nullptr), m_end(nullptr) {}
+    const_segment_iterator(const const_segment_iterator& other) :
+        m_start(other.m_start), m_end(other.m_end)
+    {
+        if (m_start)
+            update_node();
+    }
+
+    ~const_segment_iterator() {}
+
+    bool operator== (const const_segment_iterator& other) const
+    {
+        return m_start == other.m_start && m_end == other.m_end;
+    }
+
+    bool operator!= (const const_segment_iterator& other) const
+    {
+        return !operator==(other);
+    }
+
+    const_segment_iterator& operator=(const const_segment_iterator& other)
+    {
+        m_start = other.m_start;
+        m_end = other.m_end;
+        if (m_start)
+            update_node();
+        return *this;
+    }
+
+    const value_type& operator*()
+    {
+        return m_node;
+    }
+
+    const value_type* operator->()
+    {
+        return &m_node;
+    }
+
+    const_segment_iterator& operator++()
+    {
+        assert(m_start);
+        m_start = m_start->next.get();
+        m_end = m_start->next.get();
+        update_node();
+        return *this;
+    }
+
+    const_segment_iterator operator++(int)
+    {
+        assert(m_start);
+        const_segment_iterator ret = *this;
+        m_start = m_start->next.get();
+        m_end = m_start->next.get();
+        update_node();
+        return ret;
+    }
+
+    const_segment_iterator& operator--()
+    {
+        assert(m_start);
+        m_start = m_start->prev.get();
+        m_end = m_start->next.get();
+        update_node();
+        return *this;
+    }
+
+    const_segment_iterator operator--(int)
+    {
+        assert(m_start);
+        const_segment_iterator ret = *this;
+        m_start = m_start->prev.get();
+        m_end = m_start->next.get();
+        update_node();
+        return ret;
+    }
+
+private:
+    void update_node()
+    {
+        if (!m_end)
+            // The iterator is at its end position. Nothing to do.
+            return;
+
+        m_node.start = m_start->value_leaf.key;
+        m_node.end = m_end->value_leaf.key;
+        m_node.value = m_start->value_leaf.value;
+    }
+
+private:
+    const typename fst_type::node* m_start;
+    const typename fst_type::node* m_end;
+    value_type m_node;
 };
 
 }}
